feat: add default urls if parameter is empty